--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -18,7 +18,7 @@ Start Call To Action
                     <script type="text/javascript">
                     var submitted = false;
                     </script>
-                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='npr.org';}"></iframe>
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='thank_you.html';}"></iframe>
                     <form action="https://docs.google.com/forms/d/e/1FAIpQLSeJ9Ubf2HXBWdhrsnhxPcHcBMIt7HiFbPcEAy_acup0dXDFBA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
                         <div class="row" >
                             <div class="col-md-6 form-div-box">
