--- a/_includes/chordal.html
+++ b/_includes/chordal.html
@@ -32,7 +32,7 @@
                     <button id="Staff" class="">Staff</button> <button id="Wait_Times" class="">Wait Times</button>
                 </div>
                                                 <div style="margin: auto;text-align: left; padding-top: 20px;">
-            <p style="text-align: left;font-weight: 600;">Hover over a location to see its perception breakdown.
+            <p style="text-align: left;font-weight: 600;">Hover over a location to see its perception breakdown & similarity to other places.
                 <br><br>
             Best viewed on desktop.</p>
         </div>
