--- a/_includes/thank_you_page.html
+++ b/_includes/thank_you_page.html
@@ -23,7 +23,7 @@
                     <br>AreaProbe, &Access,
                     <br>Yard & Company and Tiva Capital</h3>
                 <br><br><br><br>
-                <a href="https://github.com/theo-go/Public-Spaces-Around-the-World-Dataset">Data Here</a>
+                <a href="https://github.com/theo-go/Public-Spaces-Around-the-World-Dataset" class="data-butt">Data Here</a>
                 <style type="text/css">
                 .logos-top {
                     height: 50px;
@@ -36,3 +36,12 @@
     </div>
 </div>
 <!--~./ end frontpage banner Section ~-->
+
+<style type="text/css">
+    .data-butt {
+        background-color: #9d6aef;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+    }
+</style>
